--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="../css/csr.css">
+  <link rel="stylesheet" type="text/css" href="../css/about.css">
+  <link rel="stylesheet" type="text/css" href="../css/startups.css">
+   <link rel="stylesheet" type="text/css" href="../css/infrastructure.css">
   <script src="js/jquery.js"></script>
-    <script src="js/tbi.js"></script>
-  <script src="js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="js/tbi.js"></script>
+  <script type="text/javascript" src="js/smooth-scroll.js"></script>
   <script type="text/javascript" src="js/angular.min.js"></script>
   <script type="text/javascript" src="js/angular-animate.min.js"></script>
   <script type="text/javascript" src="js/angularuirouter.min.js"></script>
@@ -23,317 +27,31 @@
                     $(sel2).toggleClass('out');
                 });
             });
+    window.scrollTo(0,0);
     
     </script>
+
+<script type="text/javascript">
+    smoothScroll.init();
+   
+</script>
  
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
    
 </head>
-<body>
+<body >
 <!--Main Nav-->
-   <div id="mainnavbar" ng-controller="navController as navctrl">
-   <div role="banner" class="navbar navbar-fixed-top navbar-inverse" class="container-fluid nav ">
-       <div class="navbar-header">
-         <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><h1 class="logo3"style="color:white;font-size:20px;font-family:Roboto;text-align:start;">Menu</h1>
-       </div>
-       <div class="navbar-inverse side-collapse in">
-         <nav role="navigation" class="navbar-collapse">
-           <ul class="nav navbar-nav">
-             <li style="width: 14.66666667%;"><img class="logo" src="images/logo.png"></li>
-             <li  class="links1" ng-click="navctrl.selectTab(0) "><a  style="position: relative;padding-top: 50px;"href="#home">Home</a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="views/About/about.html">About</a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(1)"><a  style="position: relative;padding-top: 50px;"href="views/Facilities-and-Services/infrastructure.html">Facilities & Services<span class="caret"></span></a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(2) "><a  style="position: relative;padding-top: 50px;"href="views/Our-Startups/pui.html">Our Startups<span class="caret"></span></a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(3) "><a  style="position: relative;padding-top: 50px;"href="views/News-and-Events/events.html">News & Events<span class="caret"></span></a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="views/CSR-Partnership/csrpartnership.html">CSR Partenership</a></li>
-             <li  class="links1" ng-click="navctrl.selectTab(0)"><a  style="position: relative;padding-top: 50px;"href="views/Past-Events/pastevents.html">Past Events</a></li>
-           </ul>
-         </nav>
-       </div>
-       <div id="fsdrop"  class="container-fluid dropdown1 show-hide" ng-show="navctrl.isSelected(1)">
-   <div class="container-fluid" style="display:flex;">
-   <div style="width:16%">
-    <h1 class="linkhead">FACILITIES AND <br>SERVICES</h1>
-  </div>
-  <div class="col-lg-1 col-md-1 " style="width:2%"><img style="margin-top:-21px"src="images/line.png"></div>
-  <ul class="menu2" style="width:90%;display: flex;">
-    <li class="linkdrop"><a href="">Infrastructure</a></li>
-    <li class="linkdrop"><a href="">Access<br>to Funding</a></li>
-    <li class="linkdrop"><a href="">Soft Landing<br> Support</a></li>
-    <li class="linkdrop"><a href="">Training &<br> Development</a></li>
-    <li class="linkdrop"><a href="">Projects &<br> Partnership</a></li>
-    <li class="linkdrop"><a href="">Monitoring</a></li>
-    <li class="linkdrop"><a href="">IPR Cell</a></li>
-  </ul>
-  </div>
- </div>
-  <div id="osdrop" ng-animate=" 'animate' " class="container-fluid dropdown1 animate-show"  ng-show="navctrl.isSelected(2)">
-   <div class="col-lg-12 col-md-12">
-   <div class="borderight col-lg-3 col-md-3">
-       <h1 class="linkhead">OUR <br>STARTUPS</h1>
-   </div>
-   <div class="col-lg-1 col-md-1"><img style="margin-top:-21px"src="images/line.png"></div>
-   <ul>
-       <li class="linkdrop col-lg-2 col-md-2"><a href="#">Projects<br>Under Incubation</a></li>
-       <li class="linkdrop col-lg-2 col-md-2"><a href="#">Graduated<br> Companies</a></li>
-       <li class="linkdrop col-lg-2 col-md-2"><a href="#">Anchor<br> Companies</a></li>
-   </ul>
-   </div>
-  </div>
-  <div id="news" class="container-fluid dropdown1 animate-show"  ng-show="navctrl.isSelected(3)">
-   <div class="col-lg-12 col-md-12">
-   <div class="borderight col-lg-2 col-md-2">
-       <h1 class="linkhead">NEWS & <br>EVENTS</h1>
-   </div>
-   <div class="col-lg-1 col-md-1"><img style="margin-top:-21px"src="images/line.png"></div>
-   <ul>
-       <li class="linkdrop col-lg-3 col-md-3"><a href="">Promotional<br>Events</a></li>
-    <li class="linkdrop col-lg-3 col-md-3"><a href="">Newsletter &<br>Press Release</a></li>
-   </ul>
-   </div>
-  </div>
-  </div>
+   <div ng-include="'templates/nav.html'"></div>
 
-  </div>
-  <!--mobile nav-->
-  <header role="banner" id="slidernavbar" class="navbar navbar-fixed-top navbar-inverse" class="container-fluid nav ">
-      <div class="navbar-header">
-        <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-left"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><h1 class="logo3"style="color:white;font-size:20px;font-family:Roboto;text-align:start;">Menu</h1>
-      </div>
-      <div class="navbar-inverse side-collapse in">
-        <nav role="navigation" class="navbar-collapse">
-          <ul class="navbar-nav">
-            <li class="links2"><a href="index.html">Home</a></li>
-            <li class="links2"><a href="views/About/about.html">About</a></li>
-            <li class="dropdown links2">
-            <a href="views/Facilities-and-Services/infrastructure.html" class="dropdown-toggle" data-toggle="dropdown">Facilities & Services<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Infrastructure</a></li>
-              <li><a href="#">Access<br>to Funding</a></li>
-              <li><a href="#">Soft Landing<br> Support</a></li>
-              <li><a href="#">Training &<br> Development</a></li>
-              <li><a href="#">Projects &<br> Partnership</a></li>
-              <li><a href="#">Monitoring</a></li>
-              <li><a href="#">IPR Cell</a></li>
-            </ul>
-          </li>
-              <li class="dropdown links2">
-              <a href="views/Our-Startups/pui.html" class="dropdown-toggle" data-toggle="dropdown">Our Startups<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Projects<br>Under Incubation</a></li>
-                <li><a href="#">Graduated<br> Companies</a></li>
-                <li><a href="#">Anchor<br> Companies</a></li>
-              </ul>
-            </li>
-              <li class="dropdown links2">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">News & Events<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Promotional<br>Events</a></li>
-                <li><a href="#">Newsletter &<br>Press Release</a></li>
-              </ul>
-            </li>
-            <li class="links2"><a href="views/CSR-Partnership/csrpartnership.html">CSR Partenership</a></li>
-            <li class="links2"><a href="#">Past Events</a></li>
-          </ul>
-        </nav>
-      </div>
-      </header>
-          <!--End nav bar-->
+   <div ui-view style="min-height: 100%;margin-bottom: -180px;" onLoad="window.scroll(0, -180)"></div>
+<footer class="footer" ng-include="'templates/footer.html'" >
 
-    <div id="home" class="side-collapse-container"style="background-image: url(images/background3.jpg);position: absolute;top: 0; right: 0; bottom: 0;left: 0;background-size:cover;background-repeat:no-repeat;background-position: center;">
-
-  <div class="container-fluid maintext">
-   <div class="logo4">
-     <img src="images/logo.png">    
-  </div>
-  <div class="row">
-  <div class="col-lg-8 col-md-12">
-    <h1 class="underwhite">We don't create JOBS</h1><br>
-    <h1 class="underwhite2">We create OPPORTUNITIES..</h1>
-    </div>
-    <div class="col-lg-4 col-md-4 logo2">
-    <img  src="images/logo2.png">
-     </div>
-     </div>
-    <br>
-     <div class="logo5">
-  <div class="material" href="#">APPLY NOW</div>
-  </div>
-   </div>
-     </div>
-
-
-    <div id="Mainbody" class="side-collapse-container" style="position: absolute;top:100%"ng-controller="tbiController as tbictrl">
- <div class="sliders">
-    <div id="wrap"class="links">
-      <li class="menu col-lg-6 col-md-6 col-sm-6 col-xs-6" ng-class="{ 'btn-active' : tbictrl.isSelected(1) }" ng-click="tbictrl.selectTab(1)"><a href="#"data-id="upc">Upcoming Events</a><span><img class="icon"src="images/upc.png"></img></span></li>
-      <li class="menu col-lg-6 col-md-6 col-sm-6 col-xs-6" ng-class="{ 'btn-active' : tbictrl.isSelected(2) }" ng-click="tbictrl.selectTab(2)"><a href="#"data-id="news">Latest News</a><span><img class="icon"src="images/events.png"></img></span> </li>
-    </div>
-    </div>
-    <div class="container2" id="upc" ng-show="tbictrl.isSelected(1)">
-       <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-        <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Chania">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>Event Name</h1>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-        </div>
-       </div>
-        <div class="item">
-        <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Chania">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>Event Name</h1>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-          </div>
-        </div>
-
-        <div class="item">
-        <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Flower">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>Event Name</h1>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-          </div>
-        </div>
-
-         <div class="item">
-        <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-12 sliderimage" src="images/sliderimage1.jpg" alt="Flower">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>Event Name</h1>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-          </div>
-        </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    </div>
-    </div>
-    <div class="container2" id="news" ng-show="tbictrl.isSelected(2)">
-       <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-         <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>News & Events</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>News & Events</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-          </div>
-        </div>
-
-        <div class="item">
-         <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>News & Events</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-          </div>
-        </div>
-
-
-        <div class="item">
-      <div class="row">
-          <img class="col-lg-4 col-md-4 col-sm-12  sliderimage" src="images/sliderimage1.jpg" alt="Chania">
-          <div class="col-lg-6 col-md-4 col-sm-12 text">
-              <h1>News & Events</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <img href="#" style="cursor:pointer;padding:6px;" src="images/km.png">
-          </div>
-          </div>
-        </div>
-
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-    </div>
-    </div>
-<footer class="footer" >
-   <div class="row">
-    <div class="col-lg-8">
-
-    
-</div>
- <div class="contact col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
-  <h3>Address</h3>
-  <p>VIT - Technology Business Incubator,<br>
-Vellore Institute of Technology,<br>
-Vellore – 632 014, Tamil Nadu, India.<br> 
-Tel. +91 416 224 3097<br>
-Email: vittbi@vit.ac.in, vittbi@yahoo.co.in </p>
-</div>
-</div>
-<div class="row">
-<div class="borderdown col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h4>© 2014 Copyright Vellore Institute Of Technology. All rights reserved.</h4>
-</div>
-</div> 
 </footer>
-    </div>
-<script>
-    smoothScroll.init();
-   
-</script>
+
 
 </body>
 </html>
